contrib/netbsd-tests/kernel/t_sysv.c
@@ -210,6 +210,9 @@ ATF_TC_BODY(msg, tc)
 	int loop;
 	int c_status;
 
+	if (atf_tc_get_config_var_as_bool_wd(tc, "ci", false))
+		atf_tc_skip("https://bugs.freebsd.org/233649");
+
 	/*
 	 * Install a SIGSYS handler so that we can exit gracefully if
 	 * System V Message Queue support isn't in the kernel.
